--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.6.0",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "bootstrap-4-react": "0.0.59",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
     "material-icons": "^0.3.1",
+    "mongodb": "^3.3.2",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
   },
