--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kanban",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@babel/runtime": "^7.6.0",
     "body-parser": "^1.19.0",
